# sampleProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: computeArrayGCD.cpp  computeGCD.cpp  hello.cpp
euclidean/: CMakeLists.txt  Euclidean.cpp  Euclidean.hpp
